// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpandableText component should render correctly block clicking on expand toggles to collapse 1`] = `
<button
  aria-disabled="false"
  class="pf-v5-c-button pf-m-link"
  data-ouia-component-id="OUIA-Generated-Button-link-11"
  data-ouia-component-type="PF5/Button"
  data-ouia-safe="true"
  type="button"
>
  Custom expand
</button>
`;

exports[`ExpandableText component should render correctly block clicking on expand toggles to collapse 2`] = `
<button
  aria-disabled="false"
  class="pf-v5-c-button pf-m-link"
  data-ouia-component-id="OUIA-Generated-Button-link-14"
  data-ouia-component-type="PF5/Button"
  data-ouia-safe="true"
  type="button"
>
  Custom expand
</button>
`;

exports[`ExpandableText component should render correctly block custom button titles 1`] = `
<button
  aria-disabled="false"
  class="pf-v5-c-button pf-m-link"
  data-ouia-component-id="OUIA-Generated-Button-link-13"
  data-ouia-component-type="PF5/Button"
  data-ouia-safe="true"
  type="button"
>
  Custom expand
</button>
`;

exports[`ExpandableText component should render correctly block custom button titles 2`] = `
<button
  aria-disabled="false"
  class="pf-v5-c-button pf-m-link"
  data-ouia-component-id="OUIA-Generated-Button-link-16"
  data-ouia-component-type="PF5/Button"
  data-ouia-safe="true"
  type="button"
>
  Custom expand
</button>
`;

exports[`ExpandableText component should render correctly block custom expanded button 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="pf-v5-l-stack expandableText-0-2-1 is-block"
      >
        <div
          class="pf-v5-l-stack__item"
        >
          <span>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, q...
          </span>
        </div>
        <div
          class="pf-v5-l-stack__item"
        >
          <button
            aria-disabled="false"
            class="pf-v5-c-button pf-m-link"
            data-ouia-component-id="OUIA-Generated-Button-link-12"
            data-ouia-component-type="PF5/Button"
            data-ouia-safe="true"
            type="button"
          >
            Custom expand
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="pf-v5-l-stack expandableText-0-2-1 is-block"
    >
      <div
        class="pf-v5-l-stack__item"
      >
        <span>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, q...
        </span>
      </div>
      <div
        class="pf-v5-l-stack__item"
      >
        <button
          aria-disabled="false"
          class="pf-v5-c-button pf-m-link"
          data-ouia-component-id="OUIA-Generated-Button-link-12"
          data-ouia-component-type="PF5/Button"
          data-ouia-safe="true"
          type="button"
        >
          Custom expand
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ExpandableText component should render correctly block custom expanded button 2`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="pf-v5-l-stack expandableText-0-2-1 is-block"
      >
        <div
          class="pf-v5-l-stack__item"
        >
          <span>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, q...
          </span>
        </div>
        <div
          class="pf-v5-l-stack__item"
        >
          <button
            aria-disabled="false"
            class="pf-v5-c-button pf-m-link"
            data-ouia-component-id="OUIA-Generated-Button-link-15"
            data-ouia-component-type="PF5/Button"
            data-ouia-safe="true"
            type="button"
          >
            Custom expand
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="pf-v5-l-stack expandableText-0-2-1 is-block"
    >
      <div
        class="pf-v5-l-stack__item"
      >
        <span>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, q...
        </span>
      </div>
      <div
        class="pf-v5-l-stack__item"
      >
        <button
          aria-disabled="false"
          class="pf-v5-c-button pf-m-link"
          data-ouia-component-id="OUIA-Generated-Button-link-15"
          data-ouia-component-type="PF5/Button"
          data-ouia-safe="true"
          type="button"
        >
          Custom expand
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ExpandableText component should render correctly block hovering over toggles to collapse 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="pf-v5-l-stack expandableText-0-2-1 is-block"
        data-testid="expandable-text-hover"
      >
        <div
          class="pf-v5-l-stack__item"
        >
          <span>
            Lorem ipsum dolor sit amet, consectetur adipiscing...
          </span>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="pf-v5-l-stack expandableText-0-2-1 is-block"
      data-testid="expandable-text-hover"
    >
      <div
        class="pf-v5-l-stack__item"
      >
        <span>
          Lorem ipsum dolor sit amet, consectetur adipiscing...
        </span>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ExpandableText component should render correctly block hovering over toggles to collapse 2`] = `
<div
  class="pf-v5-l-stack expandableText-0-2-1 is-block"
  data-testid="expandable-text-hover"
>
  <div
    class="pf-v5-l-stack__item"
  >
    <span>
      Lorem ipsum dolor sit amet, consectetur adipiscing...
    </span>
  </div>
</div>
`;

exports[`ExpandableText component should render correctly block hovering over toggles to collapse 3`] = `
<div
  class="pf-v5-l-stack expandableText-0-2-1 is-block"
  data-testid="expandable-text-hover"
>
  <div
    class="pf-v5-l-stack__item"
  >
    <span>
      Lorem ipsum dolor sit amet, consectetur adipiscing...
    </span>
  </div>
</div>
`;

exports[`ExpandableText component should render correctly block when text length is less than user specified length 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="pf-v5-l-stack expandableText-0-2-1 is-block"
      >
        <div
          class="pf-v5-l-stack__item"
        >
          <span>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
laborum.
          </span>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="pf-v5-l-stack expandableText-0-2-1 is-block"
    >
      <div
        class="pf-v5-l-stack__item"
      >
        <span>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
laborum.
        </span>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ExpandableText component should render correctly block with short length 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="pf-v5-l-stack expandableText-0-2-1 is-block"
      >
        <div
          class="pf-v5-l-stack__item"
        >
          <span>
            Lo...
          </span>
        </div>
        <div
          class="pf-v5-l-stack__item"
        >
          <button
            aria-disabled="false"
            class="pf-v5-c-button pf-m-link"
            data-ouia-component-id="OUIA-Generated-Button-link-10"
            data-ouia-component-type="PF5/Button"
            data-ouia-safe="true"
            type="button"
          >
            Read more
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="pf-v5-l-stack expandableText-0-2-1 is-block"
    >
      <div
        class="pf-v5-l-stack__item"
      >
        <span>
          Lo...
        </span>
      </div>
      <div
        class="pf-v5-l-stack__item"
      >
        <button
          aria-disabled="false"
          class="pf-v5-c-button pf-m-link"
          data-ouia-component-id="OUIA-Generated-Button-link-10"
          data-ouia-component-type="PF5/Button"
          data-ouia-safe="true"
          type="button"
        >
          Read more
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ExpandableText component should render correctly block without length specified 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="pf-v5-l-stack expandableText-0-2-1 is-block"
      >
        <div
          class="pf-v5-l-stack__item"
        >
          <span>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, q...
          </span>
        </div>
        <div
          class="pf-v5-l-stack__item"
        >
          <button
            aria-disabled="false"
            class="pf-v5-c-button pf-m-link"
            data-ouia-component-id="OUIA-Generated-Button-link-9"
            data-ouia-component-type="PF5/Button"
            data-ouia-safe="true"
            type="button"
          >
            Read more
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="pf-v5-l-stack expandableText-0-2-1 is-block"
    >
      <div
        class="pf-v5-l-stack__item"
      >
        <span>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, q...
        </span>
      </div>
      <div
        class="pf-v5-l-stack__item"
      >
        <button
          aria-disabled="false"
          class="pf-v5-c-button pf-m-link"
          data-ouia-component-id="OUIA-Generated-Button-link-9"
          data-ouia-component-type="PF5/Button"
          data-ouia-safe="true"
          type="button"
        >
          Read more
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ExpandableText component should render correctly inline clicking on expand toggles to collapse 1`] = `
<button
  aria-disabled="false"
  class="pf-v5-c-button pf-m-link"
  data-ouia-component-id="OUIA-Generated-Button-link-3"
  data-ouia-component-type="PF5/Button"
  data-ouia-safe="true"
  type="button"
>
  Custom expand
</button>
`;

exports[`ExpandableText component should render correctly inline clicking on expand toggles to collapse 2`] = `
<button
  aria-disabled="false"
  class="pf-v5-c-button pf-m-link"
  data-ouia-component-id="OUIA-Generated-Button-link-6"
  data-ouia-component-type="PF5/Button"
  data-ouia-safe="true"
  type="button"
>
  Custom expand
</button>
`;

exports[`ExpandableText component should render correctly inline custom button titles 1`] = `
<button
  aria-disabled="false"
  class="pf-v5-c-button pf-m-link"
  data-ouia-component-id="OUIA-Generated-Button-link-5"
  data-ouia-component-type="PF5/Button"
  data-ouia-safe="true"
  type="button"
>
  Custom expand
</button>
`;

exports[`ExpandableText component should render correctly inline custom button titles 2`] = `
<button
  aria-disabled="false"
  class="pf-v5-c-button pf-m-link"
  data-ouia-component-id="OUIA-Generated-Button-link-8"
  data-ouia-component-type="PF5/Button"
  data-ouia-safe="true"
  type="button"
>
  Custom expand
</button>
`;

exports[`ExpandableText component should render correctly inline custom expanded button 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <span
        class="expandableText-0-2-1 is-inline"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, q...
      </span>
      <button
        aria-disabled="false"
        class="pf-v5-c-button pf-m-link"
        data-ouia-component-id="OUIA-Generated-Button-link-4"
        data-ouia-component-type="PF5/Button"
        data-ouia-safe="true"
        type="button"
      >
        Custom expand
      </button>
    </div>
  </body>,
  "container": <div>
    <span
      class="expandableText-0-2-1 is-inline"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, q...
    </span>
    <button
      aria-disabled="false"
      class="pf-v5-c-button pf-m-link"
      data-ouia-component-id="OUIA-Generated-Button-link-4"
      data-ouia-component-type="PF5/Button"
      data-ouia-safe="true"
      type="button"
    >
      Custom expand
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ExpandableText component should render correctly inline custom expanded button 2`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <span
        class="expandableText-0-2-1 is-inline"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, q...
      </span>
      <button
        aria-disabled="false"
        class="pf-v5-c-button pf-m-link"
        data-ouia-component-id="OUIA-Generated-Button-link-7"
        data-ouia-component-type="PF5/Button"
        data-ouia-safe="true"
        type="button"
      >
        Custom expand
      </button>
    </div>
  </body>,
  "container": <div>
    <span
      class="expandableText-0-2-1 is-inline"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, q...
    </span>
    <button
      aria-disabled="false"
      class="pf-v5-c-button pf-m-link"
      data-ouia-component-id="OUIA-Generated-Button-link-7"
      data-ouia-component-type="PF5/Button"
      data-ouia-safe="true"
      type="button"
    >
      Custom expand
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ExpandableText component should render correctly inline hovering over toggles to collapse 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <span
        class="expandableText-0-2-1 is-inline"
        data-testid="expandable-text-hover"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing...
      </span>
    </div>
  </body>,
  "container": <div>
    <span
      class="expandableText-0-2-1 is-inline"
      data-testid="expandable-text-hover"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing...
    </span>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ExpandableText component should render correctly inline hovering over toggles to collapse 2`] = `
<span
  class="expandableText-0-2-1 is-inline"
  data-testid="expandable-text-hover"
>
  Lorem ipsum dolor sit amet, consectetur adipiscing...
</span>
`;

exports[`ExpandableText component should render correctly inline hovering over toggles to collapse 3`] = `
<span
  class="expandableText-0-2-1 is-inline"
  data-testid="expandable-text-hover"
>
  Lorem ipsum dolor sit amet, consectetur adipiscing...
</span>
`;

exports[`ExpandableText component should render correctly inline when text length is less than user specified length 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <span
        class="expandableText-0-2-1 is-inline"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
laborum.
      </span>
    </div>
  </body>,
  "container": <div>
    <span
      class="expandableText-0-2-1 is-inline"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
laborum.
    </span>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ExpandableText component should render correctly inline with short length 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="pf-v5-l-stack expandableText-0-2-1 is-block"
      >
        <div
          class="pf-v5-l-stack__item"
        >
          <span>
            Lo...
          </span>
        </div>
        <div
          class="pf-v5-l-stack__item"
        >
          <button
            aria-disabled="false"
            class="pf-v5-c-button pf-m-link"
            data-ouia-component-id="OUIA-Generated-Button-link-2"
            data-ouia-component-type="PF5/Button"
            data-ouia-safe="true"
            type="button"
          >
            Read more
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="pf-v5-l-stack expandableText-0-2-1 is-block"
    >
      <div
        class="pf-v5-l-stack__item"
      >
        <span>
          Lo...
        </span>
      </div>
      <div
        class="pf-v5-l-stack__item"
      >
        <button
          aria-disabled="false"
          class="pf-v5-c-button pf-m-link"
          data-ouia-component-id="OUIA-Generated-Button-link-2"
          data-ouia-component-type="PF5/Button"
          data-ouia-safe="true"
          type="button"
        >
          Read more
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ExpandableText component should render correctly inline without length specified 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <span
        class="expandableText-0-2-1 is-inline"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, q...
      </span>
      <button
        aria-disabled="false"
        class="pf-v5-c-button pf-m-link"
        data-ouia-component-id="OUIA-Generated-Button-link-1"
        data-ouia-component-type="PF5/Button"
        data-ouia-safe="true"
        type="button"
      >
        Read more
      </button>
    </div>
  </body>,
  "container": <div>
    <span
      class="expandableText-0-2-1 is-inline"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, q...
    </span>
    <button
      aria-disabled="false"
      class="pf-v5-c-button pf-m-link"
      data-ouia-component-id="OUIA-Generated-Button-link-1"
      data-ouia-component-type="PF5/Button"
      data-ouia-safe="true"
      type="button"
    >
      Read more
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
